--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.timbu.cloud",
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
     "@testing-library/jest-dom": "^5.17.0",
